# DroneController

./: .gitmodules  CMakeLists.txt  Drone_Controller.c  Drone_Controller.gatt  ESC.c  ESC.h  LSM6DSV32X.c  LSM6DSV32X.h  Must haves.txt  agent.md  app_config.h  app_safety.c  app_safety.h  app_state.c  app_state.h  app_types.h  bmi270.c  bmi270.h  config.h  imu_service.c  imu_service.h  kalman_filter.c  kalman_filter.h  lwipopts.h  net_control.c  net_control.h  net_http.c  net_http.h  networking.c  networking.h  platform_startup.c  platform_startup.h  wifi_manager.c  wifi_manager.h  ws_server.c  ws_server.h
content/: index.html
src/: CMakeLists.txt  Drone_Controller.c  dhcpserver.c  dhcpserver.h  lwipopts.h
